Complete the conversion of Material-UI Picker and Buttons. Minor styles updates and bug fixes.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -164,6 +164,7 @@
   "txt-duplicatedName": "Name is duplicated",
   "txt-checkRequiredFieldType": "Please check all the required fields and its format",
   "txt-threatsSrcCountryRank": "Source Country Alert Rank",
+  "txt-checkDateFormat": "Please check date format",
 
   "txt-dashboard": "Dashboard",
   "txt-host": "Host",
