Add more fields and CSV export functionality for Config Edge page. Minor fix for locales and styles.

--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -69,6 +69,7 @@
   "-7001": "開啟ES索引失敗",
   "-7002": "關閉ES索引失敗",
   "-7003": "刪除ES索引失敗",
+  "-7006": "ES服務異常",
 
   "txt-param-null": "參數為空",
   "txt-account-fail": "無法由AD獲取帳號資訊",
