--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -159,6 +159,8 @@
   "txt-sort": "Sort",
   "txt-asc": "Ascending",
   "txt-desc": "Descending",
+  "txt-viewJSON": "$t(txt-view) JSON",
+  "txt-exportCSV": "$t(txt-export) CSV",
   "txt-maxDataMsg": "The maximum data count is 10,000",
   "txt-es-data-over-limit": "Exceed max queried number, please revise filters",
   "txt-duplicatedName": "Name is duplicated",
@@ -335,7 +337,6 @@
     "txt-safetyScanInfo": "Safety Scan Info",
     "txt-severityType": "Type",
     "txt-severityDesc": "Description",
-    "txt-viewJSON": "$t(txt-view)JSON",
     "txt-queryMore": "Query",
     "txt-queryEvents": "View Details Infomation",
     "txt-searthVirustotal": "Search Virustotal",
@@ -382,8 +383,6 @@
       "txt-analysisType": "Analysis Item",
       "txt-alertRule": "$t(txt-alert)$t(txt-rule)",
       "txt-showImageOnly": "Show images only",
-      "txt-viewJSON": "$t(txt-view) JSON",
-      "txt-exportCSV": "$t(txt-export) CSV",
       "txt-toggleFilter": "$t(txt-filter)",
       "txt-toggleMark": "Mark",
       "txt-toggleChart": "Chart",
@@ -448,6 +447,7 @@
     "txt-vpnIP": "VPN IP",
     "txt-vpnLicenseName": "VPN License Name",
     "txt-deleteEdge": "$t(txt-delete)$t(txt-edge)",
+    "txt-deleteThreatType": "$t(txt-delete) Threat Type",
     "txt-serviceType": "Service Type",
     "txt-serviceMode": "Service Mode",
     "txt-addGroup": "$t(txt-add) $t(txt-group)",
@@ -455,6 +455,9 @@
     "txt-deleteGroup": "$t(txt-delete) $t(txt-group)",
     "txt-longitude": "Longitude",
     "txt-latitude": "Latitude",
+    "txt-chassisAddress": "Chassis Address",
+    "txt-chassisLocation": "Chassis Location",
+    "txt-contact": "Contact",
     "txt-activatTime": "Datetime",
     "txt-lastUpdateTime": "Last Update Time",
     "txt-anyTime": "Any Time",
