--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -70,6 +70,7 @@
   "-7001": "Open ES index fail",
   "-7002": "Close ES index fail",
   "-7003": "Delete ES index fail",
+  "-7006": "ES service is unavailable",
 
   "txt-param-null": "Parameter is NULL",
   "txt-account-fail" : "Fail to get accounts from AD",
