Add CSV export functionality for Threats, Syslog and IP device page. Add remarks for IP device data.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -121,6 +121,7 @@
   "txt-ram": "Ram",
   "txt-disks": "Disks",
   "txt-shareFolders": "Share Folders",
+  "txt-remarks": "Remarks",
   "txt-reTrigger": "Get latest System info",  
   "txt-requestSent": "Request Sent",
   "txt-analyze": "Analyze",
@@ -757,6 +758,7 @@
     "userName": "User",
     "disks": "$t(txt-disks)",
     "shareFolders": "$t(txt-shareFolders)",
+    "remarks": "Remarks",
     "cpu": "$t(txt-cpu)",
     "ram": "$t(txt-ram)",
     "hostID": "Host ID",
