--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -121,6 +121,7 @@
   "txt-ram": "記憶體",
   "txt-disks": "硬碟",
   "txt-shareFolders": "分享資料夾",
+  "txt-remarks": "備註",
   "txt-reTrigger": "重新獲取資訊",
   "txt-requestSent": "需求已送出",
   "txt-analyze": "分析",
@@ -757,6 +758,7 @@
     "userName": "人員",
     "disks": "$t(txt-disks)",
     "shareFolders": "$t(txt-shareFolders)",
+    "remarks": "備註",
     "cpu": "$t(txt-cpu)",
     "ram": "$t(txt-ram)",
     "hostID": "主機ID",
