add soc issue with 1. add new user(Super) and user action

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -22,6 +22,10 @@
 	"txt-auditV2-success": "Audit Success",
 	"txt-auditV2-fail": "Audit Fail",
 	"txt-auditV2-msg": "Whether to Audit Incident",
+	"txt-sign": "Sign",
+	"txt-sign-success": "Sign Success",
+	"txt-sign-fail": "Sign Fail",
+	"txt-sign-msg": "Whether to Sign Incident",
 	"txt-close": "Close",
 	"txt-close-success": "Close Success",
 	"txt-close-fail": "Close Fail",
