--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -517,6 +517,7 @@
   "network-inventory": {
     "txt-deviceList": "裝置列表",
     "txt-deviceMap": "裝置地圖",
+    "txt-deviceLA": "裝置拓譜圖",
     "txt-triggerAll": "全部檢測(HMD)",
     "txt-addIP": "新增IP",
     "txt-manuallyEnter": "單筆輸入",
