--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -559,7 +559,7 @@
     "txt-reCheck": "Re-check",
     "txt-reCompress": "Re-compress",
     "txt-yaraRules": "Yara Rules",
-    "txt-addToSettings": "Add to Settings",
+    "txt-addToFilterList": "Add to filter list",
     "txt-passCount": "Pass",
     "txt-totalItem": "Total",
     "txt-total": "Total upload count",
