--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -559,7 +559,7 @@
     "txt-reCheck": "重新檢測",
     "txt-reCompress": "重新壓縮",
     "txt-yaraRules": "Yara Rules",
-    "txt-addToSettings": "加入設定",
+    "txt-addToFilterList": "加入過濾名單",
     "txt-passCount": "通過",
     "txt-totalItem": "總項目",
     "txt-total": "總上傳筆數",
