--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -376,6 +376,7 @@
       "txt-noOpenQuery": "Query can not be Blank",
       "txt-threasholdCount": "Threashold count must be less than 1,000 and greater than 0",
       "txt-addPatternScript": "Custom Alert Query",
+      "txt-public": "Public",
       "txt-patternQuery1": "In",
       "txt-patternQuery2": "minutes, alert occurs more than or equal to",
       "txt-patternQuery3": "times",
