Add and implement a new Event Tracing tab for HMD.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -590,6 +590,7 @@
       "txt-scanFile": "Malware",
       "txt-gcb": "GCB",
       "txt-ir": "IR",
+      "txt-eventTracing": "Event Tracing",
       "txt-fileIntegrity": "File Integrity",
       "txt-procMonitor": "Process Monitor"
     },
