add incident export pdf

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -55,6 +55,7 @@
 	"txt-incident-event": "Security Monitoring",
 	"txt-incident-related": "Correlation Analysis",
 	"txt-incident-health": "Health Status Statistic",
+	"txt-export-all": "Export All Incidents",
 	"txt-addIncident-events": "Add Security Monitoring Incident",
 	"txt-addIncident-ttps": "Add Correlation Analysis Incident",
 	"txt-viewIncident-events": "View Security Monitoring Incident",
@@ -63,7 +64,8 @@
 	"txt-editIncident-ttps": "Edit Correlation Analysis Incident",
 	"txt-sendHealthCsv": "Send Health Status Statistic CSV",
 	"txt-exportHealthCsv": "Export Health Status Statistic CSV",
-	"txt-id": "ID:",
+	"txt-id": "ID: ",
+	"txt-incident-id": "Incident ID: ",
 	"txt-ttp-ets": "ETS",
 	"txt-ttp-obs-file": "Malicious File",
 	"txt-ttp-obs-uri": "Malicious URI",
