--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -55,6 +55,7 @@
 	"txt-incident-event": "資安監控",
 	"txt-incident-related": "關聯分析",
 	"txt-incident-health": "健康狀態統計",
+	"txt-export-all": "匯出全部事件單",
 	"txt-addIncident-events": "新增資安監控事件單",
 	"txt-addIncident-ttps": "新增關聯分析事件單",
 	"txt-viewIncident-events": "檢視資安監控事件單",
@@ -63,7 +64,8 @@
 	"txt-editIncident-ttps": "編輯關聯分析事件單",
 	"txt-sendHealthCsv": "發布健康狀態統計單",
 	"txt-exportHealthCsv": "匯出健康狀態統計單",
-	"txt-id": "編號:",
+	"txt-id": "編號: ",
+	"txt-incident-id": "事件單編號: ",
 	"txt-ttp-ets": "漏洞資訊",
 	"txt-ttp-obs-file": "惡意程式",
 	"txt-ttp-obs-uri": "惡意URI",
