--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -147,7 +147,7 @@
   "txt-domain": "Domain",
   "txt-commonModule": "Common Module",
   "txt-configModule": "Configuration Module",
-  "txt-configSoc": "SOC Module",
+  "txt-socModule": "SOC Module",
   "txt-host": "Host",
   "txt-group": "Group",
   "txt-settings": "Settings",
