--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -147,7 +147,7 @@
   "txt-domain": "網域",
   "txt-commonModule": "一般模組",
   "txt-configModule": "設定模組",
-  "txt-configSoc": "SOC模組",
+  "txt-socModule": "SOC模組",
   "txt-host": "主機",
   "txt-group": "群組",
   "txt-settings": "設定",
