--- a/locales/en/app.json
+++ b/locales/en/app.json
@@ -61,6 +61,7 @@
     "lbl-password": "Please Enter Password",
     "txt-username":"Please enter your username",
     "txt-password":"Please enter your password",
+    "txt-resetPassword": "Reset Password",
     "txt-account": "Account",
     "txt-userAccount": "Username",
     "txt-userPassword": "Password"
