--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -523,6 +523,7 @@
   "network-inventory": {
     "txt-deviceList": "Device List",
     "txt-deviceMap": "Device Map",
+    "txt-deviceLA": "Device Link Analysis",
     "txt-triggerAll": "Trigger All (HMD)",
     "txt-addIP": "Add IP",
     "txt-manuallyEnter": "Manually Enter",
