Add total count for search results table, password change functionality in global menu and IPv6 validations for Config Threats.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -14,6 +14,7 @@
   "txt-filterQuery": "Filter Query",
   "txt-monitor": "Monitor",
   "txt-pageSize": "Page Size",
+  "txt-totalCount": "Total Count",
   "txt-noData": "No Data",
   "txt-all": "All",
   "txt-view": "View",
@@ -28,6 +29,7 @@
   "txt-unlock": "Unlock",
   "txt-resetPassword": "Reset Password",
   "txt-resetPasswordSuccess": "Reset Password Success",
+  "txt-changePasswordSuccess": "Change Password Success",
   "txt-connections": "Connections",
   "txt-packets": "Packets",
   "txt-databytes": "Databytes",
