--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -14,6 +14,7 @@
   "txt-filterQuery": "過濾條件",
   "txt-search": "搜尋",
   "txt-pageSize": "單頁資料數",
+  "txt-totalCount": "總資料數",
   "txt-noData": "沒有符合的資料",
   "txt-all": "全部",
   "txt-view": "瀏覽",
@@ -28,6 +29,7 @@
   "txt-unlock": "解鎖",
   "txt-resetPassword": "重設密碼",
   "txt-resetPasswordSuccess": "重設密碼成功",
+  "txt-changePasswordSuccess": "修改密碼成功",
   "txt-connections": "連接",
   "txt-packets": "封包",
   "txt-databytes": "數據",
