--- a/locales/en/app.json
+++ b/locales/en/app.json
@@ -62,6 +62,7 @@
     "txt-username":"Please enter your username",
     "txt-password":"Please enter your password",
     "txt-resetPassword": "Reset Password",
+    "txt-changePassword": "Change Password",
     "txt-account": "Account",
     "txt-userAccount": "Username",
     "txt-userPassword": "Password"
