--- a/locales/zh/app.json
+++ b/locales/zh/app.json
@@ -62,6 +62,7 @@
     "txt-username":"請輸入帳號",
     "txt-password":"請輸入密碼",
     "txt-resetPassword": "重設密碼",
+    "txt-changePassword": "修改密碼",
     "txt-account": "帳號",
     "txt-userAccount": "帳號",
     "txt-userPassword": "密碼"
