Add previous/next page navigations for Threats/Events modal dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -111,12 +111,14 @@
   "txt-help": "Help",
   "txt-warn": "Warn",
   "txt-parse": "Parse",
+  "txt-events": "Events",
   "txt-convert": "Convert",
   "txt-previous": "Previous",
   "txt-next": "Next",
-  "txt-events": "Events",
-  "txt-nextStep": "Next",
   "txt-previousStep": "Previous",
+  "txt-nextStep": "Next",
+  "txt-previousPage": "Previous Page",
+  "txt-nextPage": "Next Page",
   "txt-save": "Save",
   "txt-manage": "Manage",
   "txt-path": "Path",
