--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -111,12 +111,14 @@
   "txt-help": "說明",
   "txt-warn": "警告",
   "txt-parse": "解析",
+  "txt-events": "Events",
   "txt-convert": "轉換",
   "txt-previous": "上一則",
   "txt-next": "下一則",
-  "txt-events": "Events",
-  "txt-nextStep": "下一步",
   "txt-previousStep": "上一步",
+  "txt-nextStep": "下一步",
+  "txt-previousPage": "上一頁",
+  "txt-nextPage": "下一頁",
   "txt-save": "儲存",
   "txt-manage": "管理",
   "txt-path": "路徑",
