--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -173,6 +173,7 @@
   "txt-checkRequiredFieldType": "Please check all the required fields and its format",
   "txt-threatsSrcCountryRank": "Source Country Alert Rank",
   "txt-checkDateFormat": "Please check date format",
+  "txt-layout-change": "Layout changed，whether to save ?",
 
   "txt-dashboard": "Dashboard",
   "txt-host": "Host",
