--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -173,6 +173,7 @@
   "txt-checkRequiredFieldType": "請檢查格式及必填欄位",
   "txt-threatsSrcCountryRank": "威脅來源國家排名",
   "txt-checkDateFormat": "請確認日期格式",
+  "txt-layout-change": "版面布局已變更，是否儲存 ?",
 
   "txt-dashboard": "Dashboard",
   "txt-host": "Host",
