Add optional Upgrade datetime checkbox for Edge.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -97,6 +97,7 @@
   "txt-password": "Password",
   "txt-start": "Start",
   "txt-stop": "Stop",
+  "txt-activate": "Activate",
   "txt-at": "at",
   "txt-realtime": "Realtime",
   "txt-tcpdump": "TCPDUMP",
@@ -469,7 +470,8 @@
     "txt-chassisAddress": "Chassis Address",
     "txt-chassisLocation": "Chassis Location",
     "txt-contact": "Contact",
-    "txt-activatTime": "Datetime",
+    "txt-upgradeTime": "Upgrade Date time",
+    "txt-activatTime": "Activate Date time",
     "txt-lastUpdateTime": "Last Update Time",
     "txt-anyTime": "Any Time",
     "txt-customTime": "Custom Time",
