--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -97,6 +97,7 @@
   "txt-password": "密碼",
   "txt-start": "開始",
   "txt-stop": "停止",
+  "txt-activate": "啟動",
   "txt-at": "在",
   "txt-realtime": "Realtime",
   "txt-tcpdump": "TCPDUMP",
@@ -468,6 +469,7 @@
     "txt-chassisAddress": "機櫃地址",
     "txt-chassisLocation": "機櫃位置",
     "txt-contact": "窗口",
+    "txt-upgradeTime": "升級時間",
     "txt-activatTime": "啟用時間",
     "txt-lastUpdateTime": "最近更新時間",
     "txt-anyTime": "不限時段",
