--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -555,6 +555,7 @@
     "txt-suspiciousFileCount": "可疑檔案數",
     "txt-suspiciousFileName": "可疑檔案名稱",
     "txt-suspiciousFilePath": "可疑檔案路徑",
+    "txt-vulnerabilityInfo": "用戶端設備漏洞偵測",
     "txt-filePathList": "掃描路徑",
     "txt-modifiedFileCount": "異動檔案數",
     "txt-taskFailure": "執行異常",
@@ -605,7 +606,8 @@
       "txt-ir": "IR",
       "txt-eventTracing": "Event Tracing",
       "txt-fileIntegrity": "File Integrity",
-      "txt-procMonitor": "Process Monitor"
+      "txt-procMonitor": "Process Monitor",
+      "txt-_Vans": "VANS"
     },
     "ir-type": {
       "txt-quick": "快速採證",
