Complete adding VANS tab to the HMD modal dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -167,6 +167,8 @@
   "txt-sort": "Sort",
   "txt-asc": "Ascending",
   "txt-desc": "Descending",
+  "txt-description": "Description",
+  "txt-reference": "Reference",
   "txt-viewJSON": "$t(txt-view) JSON",
   "txt-exportCSV": "$t(txt-export) CSV",
   "txt-exportPDF": "$t(txt-export) PDF",
@@ -312,7 +314,6 @@
   "host": {
     "txt-hostList": "Host List",
     "txt-deviceMap": "Device Map",
-    "txt-deviceLA": "Device Topology",
     "txt-hostInfo": "Host Info",
     "txt-viewInfo": "View Info",
     "txt-hostList2": "Host",
@@ -585,6 +586,8 @@
     "txt-irMsg": "IR data has been uploaded to",
     "txt-itemSelection": "Select IR Set",
     "txt-duplicatedIP": "IP already exists, please enter another IP",
+    "txt-publishedDate": "Published Date",
+    "txt-lastModifiedDate": "Last Modified Date",
     "txt-editFloorMap": "$t(txt-edit) $t(txt-floorMap)",
     "txt-viewDevice": "$t(txt-view) $t(alert.txt-ipBasicInfo)",
     "txt-viewHMD": "$t(txt-view) $t(alert.txt-safetyScanInfo)",
