--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -167,6 +167,8 @@
   "txt-sort": "排序",
   "txt-asc": "升序",
   "txt-desc": "降序",
+  "txt-description": "描述",
+  "txt-reference": "參考",
   "txt-viewJSON": "$t(txt-view)JSON",
   "txt-exportCSV": "$t(txt-export)CSV",
   "txt-exportPDF": "$t(txt-export)PDF",
@@ -584,6 +586,8 @@
     "txt-irMsg": "IR資料已上傳至",
     "txt-itemSelection": "電腦採證",
     "txt-duplicatedIP": "IP已存在，請重新輸入",
+    "txt-publishedDate": "發布日期",
+    "txt-lastModifiedDate": "上次修改日期",
     "txt-editFloorMap": "$t(txt-edit)$t(txt-floorMap)",
     "txt-viewDevice": "$t(txt-view)$t(alert.txt-ipBasicInfo)",
     "txt-viewHMD": "$t(txt-view)$t(alert.txt-safetyScanInfo)",
