add notify contact block

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -81,6 +81,7 @@
 	"txt-fileMemo": "Attachment Description",
 	"txt-flowTitle": "Event Handling Process",
 	"txt-accidentTitle": "Accident Classification and Abnormal Reason",
+	"txt-notifyUnit": "Notification Contact List",
 	"txt-reason": "Abnormal Reason",
 	"txt-accidentClassification": "Accident Classification",
 	"txt-reasonDescr": "Accident Reason Description",
