Various bug fixes based on QA's feedback.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -436,7 +436,7 @@
     "txt-senderPassword": "寄件者密碼",
     "txt-recipientEmail": "收件者郵件信箱",
     "txt-notifyEmail": "通知郵件信箱",
-    "txt-emailInvalid": "請輸入正確email",
+    "txt-emailInvalid": "請輸入正確的email",
     "txt-sendSuccess": "寄送成功"
   },
 
@@ -515,7 +515,6 @@
 
   "threat-severity-mapping": {
     "txt-severityMapping": "情資嚴重等級管理",
-    "txt-addSeverityTable": "新增類型",
     "txt-typeInfo": "類型內容",
     "txt-lastUpdateTime": "最近更新時間",
     "txt-severityMissing": "嚴重等級類型不得為空白"
