--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -436,7 +436,7 @@
     "txt-senderPassword": "Sender Password",
     "txt-recipientEmail": "Recipient Email",
     "txt-notifyEmail": "Notify Email Address",
-    "txt-emailInvalid": "Please enter correct email address",
+    "txt-emailInvalid": "Please enter the correct email address",
     "txt-sendSuccess": "Email has been sent successfully"
   },
 
@@ -515,7 +515,6 @@
 
   "threat-severity-mapping": {
     "txt-severityMapping": "Threat Severity Mapping",
-    "txt-addSeverityTable": "Add Type",
     "txt-typeInfo": "Type Info",
     "txt-lastUpdateTime": "Last Update Time",
     "txt-severityMissing": "Severity type cannot be empty"
@@ -825,7 +824,7 @@
     "txt-customFieldName": "Custom Field Name",
     "txt-addSyslog": "Add Syslog",
     "txt-editSyslog": "Edit Syslog",
-    "txt-deleteSyslogdeleteSyslog": "Delete Syslog",
+    "txt-deleteSyslog": "Delete Syslog",
     "txt-eventDist": " Event Distribution",
     "txt-viewEvents": "View Events",
     "txt-overallDist": "Overall Distribution",
