--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -82,6 +82,7 @@
 	"txt-flowTitle": "事件處理進度",
 	"txt-accidentTitle": "事故分類與異常原因",
 	"txt-notifyUnit": "額外通知聯絡人列表",
+	"txt-notify": "通知聯絡人",
 	"txt-reason": "異常原因",
 	"txt-reasonDescr": "事故發生原因",
 	"txt-accidentClassification": "事故分類",
