--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -669,6 +669,7 @@
     "txt-portValidationFail": "Please check the port number",
     "txt-seatNameEmpty": "Please enter a seat name",
     "txt-saveSuccess": "Saved",
+    "txt-maxCharError": "Maximum characters count is 64",
 
     "txt-addOwner": "$t(txt-add) $t(ipFields.owner)",
     "txt-editOwner": "$t(txt-edit) $t(ipFields.owner)",
