--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -22,10 +22,10 @@
 	"txt-auditV2-success": "審核成功",
 	"txt-auditV2-fail": "審核失敗",
 	"txt-auditV2-msg": "是否審核",
-	"txt-close": "撤案",
-	"txt-close-success": "撤案成功",
-	"txt-close-fail": "撤案失敗",
-	"txt-close-msg": "是否撤案",
+	"txt-close": "存參",
+	"txt-close-success": "存參成功",
+	"txt-close-fail": "存參失敗",
+	"txt-close-msg": "是否存參",
 	"txt-sign": "簽核",
 	"txt-sign-success": "簽核成功",
 	"txt-sign-fail": "簽核失敗",
