--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -115,6 +115,7 @@
 	"txt-validTechniqueInfa": "請檢查手法描述及指標類型",
 	"txt-validTTPs": "請檢查否正確輸入攻擊手法資料",
 	"txt-validEvents": "請檢查否正確輸入監控觸發紀錄資料",
+	"txt-validBasic": "請檢查否正確輸入事件單基本資料",
 	"txt-portValidationFail": "請輸入正確Port格式",
 	"txt-validUnit": "請檢查否正確輸入資安事件申報機關資料",
 	"accident": {
