--- a/locales/zh/lms.json
+++ b/locales/zh/lms.json
@@ -12,7 +12,9 @@
   "16": "產品資訊未發現",
   "17": "Detail未開通",
   "18": "安裝路徑不相符",
-  
+  "19": "無效註冊碼",
+
+  "-99": "伺服器連線異常",
   "-2000": "設定初始化錯誤",
   "-2001": "SOAP_SSL初始化錯誤",
   "-2002": "加密初始化錯誤",
