--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -112,12 +112,12 @@
 	"txt-day": "天",
 	"file-too-large": "上傳檔案過大，超過20MB",
 	"txt-checkRequiredFieldType": "請輸入正確欄位格式",
-	"txt-validTechniqueInfa": "請檢查手法描述及指標類型",
-	"txt-validTTPs": "請檢查否正確輸入攻擊手法資料",
-	"txt-validEvents": "請檢查否正確輸入監控觸發紀錄資料",
-	"txt-validBasic": "請檢查否正確輸入事件單基本資料",
+	"txt-validTechniqueInfa": "請檢查是否正確輸入手法描述及指標類型資料",
+	"txt-validTTPs": "請檢查是否正確輸入攻擊手法資料",
+	"txt-validEvents": "請檢查是否正確輸入監控觸發紀錄資料",
+	"txt-validBasic": "請檢查是否正確輸入事件單基本資料",
 	"txt-portValidationFail": "請輸入正確Port格式",
-	"txt-validUnit": "請檢查否正確輸入資安事件申報機關資料",
+	"txt-validUnit": "請檢查是否正確輸入資安事件申報機關資料",
 	"accident": {
 		"1": "網頁攻擊",
 		"11": "網頁置換",
