Add Malware add to white list button and status for HMD dialog. Add Process Monitor interval in HMD settings.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -558,6 +558,9 @@
     "txt-suspiciousFilePath": "Suspicious File Path",
     "txt-vulnerabilityInfo": "Vulnerability Info",
     "txt-VulnerabilityCount": "Vulnerabilities",
+    "txt-learningInterval": "Process Monitor Learning Interval (second)",
+    "txt-addWhiteList": "Add into Whitelist",
+    "txt-addedWhiteList": "Added into Whitelist",
     "txt-filePathList": "File Path List",
     "txt-modifiedFileCount": "Modified files",
     "txt-taskFailure": "Task Failure",
