--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -558,6 +558,9 @@
     "txt-suspiciousFilePath": "可疑檔案路徑",
     "txt-vulnerabilityInfo": "用戶端設備漏洞偵測",
     "txt-VulnerabilityCount": "用戶端漏洞設備數",
+    "txt-learningInterval": "執行序執行學習時間(秒)",
+    "txt-addWhiteList": "加入白名單",
+    "txt-addedWhiteList": "已加入白名單",
     "txt-filePathList": "掃描路徑",
     "txt-modifiedFileCount": "異動檔案數",
     "txt-taskFailure": "執行異常",
