add more vaild dialog in frontend

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -112,6 +112,9 @@
 	"txt-day": "Day",
 	"file-too-large": "Upload file over limit，limit is 20MB",
 	"txt-checkRequiredFieldType": "Please enter the correct format value",
+	"txt-checkFileFieldType": "Please check the is enter correct malicious file format values or not",
+	"txt-checkUrlFieldType": "Please check the is enter correct malicious domain values or not",
+	"txt-checkIPFieldType": "Please check the is enter correct malicious ip values or not",
 	"txt-validTechniqueInfa": "Please check the Technique & Infrastructure Type",
 	"txt-validTTPs": "Please check the is enter correct TTPs values or not",
 	"txt-validEvents": "Please check the is enter correct Incident Events values or not",
