--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -112,6 +112,9 @@
 	"txt-day": "天",
 	"file-too-large": "上傳檔案過大，超過20MB",
 	"txt-checkRequiredFieldType": "請輸入正確欄位格式",
+	"txt-checkFileFieldType": "請輸入正確惡意檔案資料",
+	"txt-checkUrlFieldType": "請輸入正確惡意網域(URL)資料",
+	"txt-checkIPFieldType": "請輸入正確惡意IP資料",
 	"txt-validTechniqueInfa": "請檢查是否正確輸入手法描述及指標類型資料",
 	"txt-validTTPs": "請檢查是否正確輸入攻擊手法資料",
 	"txt-validEvents": "請檢查是否正確輸入監控觸發紀錄資料",
