Fix bug for HMD Malware path list. Add confirm dialog for Add to Whitelist button. Add VANS and Event Tracing info for Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -556,9 +556,11 @@
     "txt-suspiciousFileCount": "Suspicious File Count",
     "txt-suspiciousFileName": "Suspicious Filename",
     "txt-suspiciousFilePath": "Suspicious File Path",
+    "txt-eventsLogCount": "Events Log Count",
     "txt-vulnerabilityInfo": "Vulnerability Info",
     "txt-VulnerabilityCount": "Vulnerabilities",
     "txt-learningInterval": "Process Monitor Learning Interval (second)",
+    "txt-confirmWhiteList": "Confirm to add to whitelist?",
     "txt-addWhiteList": "Add into Whitelist",
     "txt-addedWhiteList": "Added into Whitelist",
     "txt-filePathList": "File Path List",
