--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -556,9 +556,11 @@
     "txt-suspiciousFileCount": "可疑檔案數",
     "txt-suspiciousFileName": "可疑檔案名稱",
     "txt-suspiciousFilePath": "可疑檔案路徑",
+    "txt-eventsLogCount": "事件日誌數量",
     "txt-vulnerabilityInfo": "用戶端設備漏洞偵測",
     "txt-VulnerabilityCount": "用戶端漏洞設備數",
     "txt-learningInterval": "執行序執行學習時間(秒)",
+    "txt-confirmWhiteList": "確定要加入白名單",
     "txt-addWhiteList": "加入白名單",
     "txt-addedWhiteList": "已加入白名單",
     "txt-filePathList": "掃描路徑",
