--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -39,6 +39,8 @@
 	"txt-send": "發布",
 	"txt-send-success": "發布成功",
 	"txt-send-fail": "發布失敗",
+	"txt-send-connect-fail": "發布失敗(連線失敗)",
+	"txt-send-other-fail": "發布失敗(系統錯誤)",
 	"txt-send-msg": "是否發布",
 	"txt-return": "退單",
 	"txt-return-success": "退單成功",
