--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -334,6 +334,7 @@
     "txt-invalidDate": "Invalid Date Format",
     "txt-openVideo": "Open Video",
     "txt-alertList": "Alert List",
+    "txt-trackAlertList": "Tracked Alert List",
     "txt-statistics": "Statistics",
     "txt-alertInfo": "Alert Info",
     "txt-alertTime": "Alert Time",
