--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -334,6 +334,7 @@
     "txt-invalidDate": "時間格式錯誤",
     "txt-openVideo": "開啟攝影畫面",
     "txt-alertList": "告警清單",
+    "txt-trackAlertList": "已追蹤告警",
     "txt-statistics": "統計報表",
     "txt-alertInfo": "告警資訊",
     "txt-alertTime": "告警時間",
